# libtime

./: .gitignore  COPYING  GNUmakefile  common.mk  libtime.c  libtime.h  meson.build
include/: libtime.h  libtime_begin.h  libtime_cpu.h  libtime_end.h  platform.h
include/msvc/: stdint.h
private/: platform.h
private/msvc/: stdint.h
src/: cpu.c  libtime.c  libtime_internal.h  meson.build  sleep.c  wall_darwin.c  wall_posix.c  wall_windows.c
tests/: meson.build  test_conv.c  test_cpu.c
win32/vs2005/: .gitignore  libtime.vcproj
